Fixed small subheading wrap.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -669,12 +669,15 @@ body {
                 white-space: nowrap;
                 @media (max-width: @screen-md-min) {
                     font-size: 4rem;
+                    white-space: normal;
                 }
                 @media (max-width: @screen-sm-min) {
                     font-size: 3rem;
+                    white-space: normal;
                 }
                 @media (max-width: @screen-xs-min) {
                     font-size: 2rem;
+                    white-space: normal;
                 }
 
             }
@@ -800,9 +803,11 @@ body {
                 }
                 @media (max-width: @screen-sm-min) {
                     font-size: 3rem;
+                    white-space: normal;
                 }
                 @media (max-width: @screen-xs-min) {
                     font-size: 2rem;
+                    white-space: normal;
                 }
 
             }
@@ -1129,9 +1134,11 @@ body {
                 }
                 @media (max-width: @screen-sm-min) {
                     font-size: 3rem;
+                    white-space: normal;
                 }
                 @media (max-width: @screen-xs-min) {
                     font-size: 2rem;
+                    white-space: normal;
                 }
 
             }
@@ -1309,9 +1316,11 @@ body {
                 }
                 @media (max-width: @screen-sm-min) {
                     font-size: 3rem;
+                    white-space: normal;
                 }
                 @media (max-width: @screen-xs-min) {
                     font-size: 2rem;
+                    white-space: normal;
                 }
 
             }
@@ -1537,9 +1546,11 @@ body {
                 }
                 @media (max-width: @screen-sm-min) {
                     font-size: 3rem;
+                    white-space: normal;
                 }
                 @media (max-width: @screen-xs-min) {
                     font-size: 2rem;
+                    white-space: normal;
                 }
 
             }
